fixed spacing in contact section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,3 +130,7 @@ ul {
 .post-content {
   margin-top: 40px;
 }
+
+.contact-box {
+  margin-top: 15px;
+}
